[project]
name = "pyqt-stock-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.6"
dependencies = [
  "flask>=3.0",
  "ib-insync>=0.9.86",
  "PyQt6>=6.6",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "openai>=1.40",
  "optuna>=3.6",
  "pandas>=2.0",
  "plotly>=5.24",
  "prophet>=1.1.5",
  "requests>=2.31",
  "scikit-learn>=1.3",
  "xgboost>=2.1",
  "yfinance>=0.2.40",

]
